--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -14,6 +14,7 @@
        android:background="@color/black"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
+       app:tabIndicator="@drawable/tab_indicator"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
    <androidx.viewpager.widget.ViewPager
