--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#040D12</color>
+    <color name="gray">#183D3D</color>
+    <color name="glay">#5C8374</color>
+    <color name="lay">#93B1A6</color>
+    <color name="white">#EDEDED</color>
 </resources>
