--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Voztify" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+    <resources xmlns:tools="http://schemas.android.com/tools">
+        <!-- Base application theme. -->
+        <style name="Base.Theme.Voztify" parent="Theme.Material3.DayNight.NoActionBar">
+            <!-- Customize your light theme here. -->
+            <item name="android:fontFamily">@font/my_font</item>
+            <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        </style>
 
-    <style name="Theme.Voztify" parent="Base.Theme.Voztify" />
-</resources>
+        <style name="Theme.Voztify" parent="Base.Theme.Voztify" />
+    </resources>
