--- a/app/src/main/res/drawable/tab_indicator.xml
+++ b/app/src/main/res/drawable/tab_indicator.xml
@@ -7,7 +7,7 @@
                 android:width="57dp"
                 android:height="3dp" />
             <corners android:radius="4dp" />
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="#5C8374" />
         </shape>
     </item>
 </layer-list>
