--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -13,8 +13,10 @@
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="6dp"
+       app:tabTextColor="#93B1A6"
        android:minHeight="?attr/actionBarSize"
        app:tabIndicator="@drawable/tab_indicator"
+       app:tabIndicatorColor="#93B1A6"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
    <androidx.viewpager.widget.ViewPager
