--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="glay">#5C8374</color>
     <color name="lay">#93B1A6</color>
     <color name="white">#EDEDED</color>
+    <color name="your_color_primary">#5C8374</color>
 </resources>
