--- a/app/src/main/res/menu/top_navigatiom_menu.xml
+++ b/app/src/main/res/menu/top_navigatiom_menu.xml
@@ -10,5 +10,7 @@
         android:id="@+id/menu_setting"
         android:title="Setting"
         app:showAsAction="always"
-        android:icon="@drawable/baseline_settings_24"/>
+        android:onClick="onClickSetting"
+        android:icon="@drawable/baseline_settings_24">
+    </item>
 </menu>
