--- a/app/src/main/res/menu/top_navigatiom_menu.xml
+++ b/app/src/main/res/menu/top_navigatiom_menu.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -10,7 +11,7 @@
         android:id="@+id/menu_setting"
         android:title="Setting"
         app:showAsAction="always"
-        android:onClick="onClickSetting"
-        android:icon="@drawable/baseline_settings_24">
+        android:icon="@drawable/baseline_settings_24"
+        tools:ignore="HardcodedText">
     </item>
 </menu>
