--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:orientation="vertical"
-    android:gravity="center"
     tools:context=".Login">
 
+    <!-- Toolbar vẫn giữ nguyên như cũ -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:gravity="top"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
-
+        <!-- TextView trong Toolbar -->
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
@@ -25,72 +25,78 @@
             android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/textView"
+    <!-- Sử dụng LinearLayout để đặt các thành phần còn lại ở giữa -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"
-        android:text="Email or Phone number" />
-
-    <EditText
-        android:id="@+id/edtEmailOrPhoneNum"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
         android:paddingStart="20dp"
-        android:paddingEnd="0dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textColor="@color/white"
-        android:background="@drawable/edit_text_background"
-        android:maxLines="1"
-        tools:ignore="HardcodedText"
-        android:importantForAutofill="no" />
+        android:paddingEnd="20dp">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"
-        android:text="Password" />
+        <!-- TextView cho Email or Phone Number -->
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email or Phone number"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/edtPass"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="0dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:inputType="textPassword"
-        android:background="@drawable/edit_text_background"
-        tools:ignore="HardcodedText"
-        android:autofillHints="no" />
+        <!-- EditText cho Email or Phone Number -->
+        <EditText
+            android:id="@+id/edtEmailOrPhoneNum"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@drawable/edit_text_background"
+            android:ems="10"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:maxLines="1"
+            android:paddingStart="20dp"
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/button_background_3"
-        android:text="Log in"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        <!-- TextView cho Password -->
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="Password"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-</LinearLayout>
+        <!-- EditText cho Password -->
+        <EditText
+            android:id="@+id/edtPass"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:autofillHints="no"
+            android:background="@drawable/edit_text_background"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
+
+        <!-- Nút Login -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/button_background_3"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:text="Log in"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+</RelativeLayout>
