PlayMusicActivity xong gần hết chức năng nhưng updateSeekBarAndTime() khi update seekBar và startTime thì bị khựng lại sau mỗi 1s (ai fix dc fix)

--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -90,6 +90,7 @@
             android:layout_marginTop="2dp">
 
             <TextView
+                android:id="@+id/startTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0:00"
@@ -103,6 +104,7 @@
                 android:layout_weight="1"/>
 
             <TextView
+                android:id="@+id/endTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0:00"
