--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="bottom"
+    android:gravity="center"
     android:background="@color/black"
     tools:context=".Register">
 
@@ -26,63 +26,6 @@
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_background_1"
         android:text="Sign up free"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:gravity="center"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnResPhoneNum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/button_background_2"
-        android:text="Continue with phone number"
-        android:drawableStart="@drawable/phone"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:gravity="center"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnResGoogle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/button_background_2"
-        android:drawableStart="@drawable/google"
-        android:text="Continue with Google"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:gravity="center"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnResFace"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/button_background_2"
-        android:drawableStart="@drawable/facebook"
-        android:text="Continue with Facebook"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:paddingStart="16dp"
