--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -73,6 +73,7 @@
         android:importantForAutofill="no"
         android:inputType="number"
         android:maxLines="1"
+        android:maxLength="11"
         android:paddingStart="20dp"
         android:paddingEnd="0dp"
         android:textColor="@color/white"
