--- a/app/src/main/res/layout/album_grid_item.xml
+++ b/app/src/main/res/layout/album_grid_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/album_cover"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
         android:scaleType="centerCrop"
         android:background="@drawable/round_corners" />
 
@@ -15,11 +16,12 @@
         android:id="@+id/album_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@android:color/transparent"
+        android:layout_gravity="bottom|center"
         android:gravity="center"
+        android:background="@android:color/transparent"
+        android:textSize="14dp"
         android:padding="4dp"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
-</FrameLayout>
+</LinearLayout>
