--- a/app/src/main/res/layout/artist_recycler_grid_item.xml
+++ b/app/src/main/res/layout/artist_recycler_grid_item.xml
@@ -28,10 +28,12 @@
 
     <TextView
         android:id="@+id/artist_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Artist Name"
         android:textSize="20dp"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:textColor="#ffffff"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
