--- a/app/src/main/res/layout/track_recycler_grid_item.xml
+++ b/app/src/main/res/layout/track_recycler_grid_item.xml
@@ -8,14 +8,15 @@
 
     <ImageView
         android:id="@+id/song_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
         android:src="@drawable/baseline_notifications_24" />
 
     <TextView
         android:id="@+id/song_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:text="Song Title"
         android:textSize="20dp"
         android:textColor="#ffffff"
@@ -23,7 +24,7 @@
 
     <TextView
         android:id="@+id/song_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Song Artist"
         android:textAppearance="?attr/textAppearanceListItem"
