--- a/app/src/main/res/layout/activity_playlist_detail.xml
+++ b/app/src/main/res/layout/activity_playlist_detail.xml
@@ -6,38 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".PlaylistDetailActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar4sd"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/black"
+        android:gravity="top"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- TextView trong Toolbar -->
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar4sd"
+        android:layout_marginTop="0dp"
         android:background="@color/black"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/img_playlist_detail"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/tv_playlist_detail_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:padding="6dp"
-            android:textStyle="bold"
+            android:text="TextView"
             android:textColor="@color/white"
-            android:text="TextView" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_your_name_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="16dp"
-            android:padding="6dp"
-            android:textStyle="bold"
-            android:text="TextView" />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,13 +78,14 @@
                 android:id="@+id/imageButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/black"
                 android:layout_marginLeft="280dp"
+                android:background="@color/black"
                 android:src="@drawable/play" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_add_song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -79,10 +102,10 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
                 android:layout_marginTop="14dp"
-                android:textSize="18dp"
-                android:text="Thêm vào danh sách này" />
+                android:text="Thêm vào danh sách này"
+                android:textColor="@color/white"
+                android:textSize="18dp" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
