--- a/app/src/main/res/layout/playlist_recycle_grid_item.xml
+++ b/app/src/main/res/layout/playlist_recycle_grid_item.xml
@@ -12,14 +12,29 @@
         android:layout_height="180dp"
         android:src="@android:drawable/btn_star" />
 
-    <TextView
-        android:id="@+id/tv_playlist_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:text="TextView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_playlist_name"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/img_btn_delete_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@color/black"
+            android:src="@drawable/baseline_delete_24" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv_your_name"
         android:layout_width="wrap_content"
