--- a/app/src/main/res/layout/item_radio_genre.xml
+++ b/app/src/main/res/layout/item_radio_genre.xml
@@ -1,22 +1,34 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginEnd="10dp">
+   android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/ivRadioGenre"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="500dp">
+
+        <ImageView
+            android:id="@+id/ivRadioGenre"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"
+            android:src="@drawable/ai" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="18dp"
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@android:color/white" />
