--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,9 +12,9 @@
             android:icon="@drawable/baseline_show_chart_24"/>
 
         <item
-            android:id="@+id/action_chart"
-            android:title="Chart-topper"
-            android:icon="@drawable/baseline_bar_chart_24" />
+            android:id="@+id/action_history"
+            android:title="History"
+            android:icon="@drawable/baseline_history_24" />
 
         <item
             android:id="@+id/action_search"
