--- a/app/src/main/res/layout/activity_insert_song_playlist.xml
+++ b/app/src/main/res/layout/activity_insert_song_playlist.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    android:background="#F1EBEB"
     tools:context=".ActivityInsertSongPlaylist">
 
 
@@ -23,6 +22,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_search_song"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </RelativeLayout>
