--- a/app/src/main/res/layout/activity_update_playlist.xml
+++ b/app/src/main/res/layout/activity_update_playlist.xml
@@ -52,6 +52,15 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_update"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Lưu" />
     </LinearLayout>
 </RelativeLayout>
