--- a/app/src/main/res/layout/playlist_list_item.xml
+++ b/app/src/main/res/layout/playlist_list_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="50dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_add_circle_outline_black_24"
             android:background="@color/white"
-            android:layout_marginLeft="200dp"/>
+            android:layout_marginLeft="230dp"/>
 
     </LinearLayout>
 </RelativeLayout>
