--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -130,6 +130,25 @@
             android:orientation="vertical"
             android:layout_marginTop="16dp">
 
+            <!-- RecyclerView Tracks -->
+            <TextView
+                android:id="@+id/tvTopTracks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#5C8374"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:text="Top Tracks" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewTopTracks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="#040D12"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:paddingBottom="10dp"/>
+
             <!-- RecyclerView Artists -->
             <TextView
                 android:id="@+id/tvTopArtists"
