--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -122,6 +122,21 @@
             android:layout_marginTop="16dp">
 
             <ImageButton
+                android:id="@+id/shuffleButton"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="start"
+                android:scaleType="centerCrop"
+                android:src="@drawable/repeat_off"
+                android:background="?android:attr/selectableItemBackground"
+                android:layout_marginLeft="10dp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <ImageButton
                 android:id="@+id/previousButton"
                 android:layout_width="46dp"
                 android:layout_height="46dp"
@@ -143,6 +158,23 @@
                 android:src="@drawable/ic_next"
                 android:layout_marginLeft="10dp"
                 android:background="?android:attr/selectableItemBackground"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/repeatButton"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="start"
+                android:scaleType="centerCrop"
+                android:src="@drawable/shuffle_off"
+                android:background="?android:attr/selectableItemBackground"
+                android:layout_marginRight="10dp"/>
         </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
