--- a/app/src/main/res/layout/activity_track_detail.xml
+++ b/app/src/main/res/layout/activity_track_detail.xml
@@ -28,14 +28,14 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/albumImage"
+                android:id="@+id/trackImage"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop" />
 
             <TextView
-                android:id="@+id/albumName"
+                android:id="@+id/trackTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -45,7 +45,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/albumArtistName"
+                android:id="@+id/trackArtist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -54,7 +54,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/albumTracksLabel"
+                android:id="@+id/trackTracksLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Tracks"
@@ -65,11 +65,12 @@
                 android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/albumTracksRecyclerView"
+                android:id="@+id/trackTracksRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_marginTop="8dp"/>
+
         </LinearLayout>
     </FrameLayout>
 </LinearLayout>
