--- a/app/src/main/res/layout/album_grid_item.xml
+++ b/app/src/main/res/layout/album_grid_item.xml
@@ -22,6 +22,6 @@
         android:textSize="14dp"
         android:padding="4dp"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@android:color/black" />
+        android:textColor="#fff" />
 
 </LinearLayout>
