--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#040D12">
 
-    <!-- Search bar layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,10 +17,13 @@
 
         <EditText
             android:id="@+id/search_field"
-            android:hint="Search by Artist, Song or Album"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"
+            android:hint="Search by Artist, Song or Album"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
+            style="@style/EditTextWhiteHint"/>
     </RelativeLayout>
 
     <GridView
